--- a/qlthucung/Views/SanPham/TatCaSanPham.cshtml
+++ b/qlthucung/Views/SanPham/TatCaSanPham.cshtml
@@ -4,11 +4,14 @@
     ViewData["Title"] = "TatCaSanPham";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-<link rel="stylesheet" href="~/Content/css/style.min.css" />
-<div class="body" style="margin-top: 100px;">
 
-    <div class="body__mainTitle d-flex justify-content-between align-items-center mb-1">
+<a class="btn btn-sm btn-primary mt-4" asp-controller="SanPham" asp-action="Index"><i class="fa fa-arrow-circle-left"></i> Trở về mua hàng</a>
+<a href="javascript:history.back()" class="btn btn-sm btn-primary mt-4">
+    <i class="fa fa-arrow-circle-left"></i> Quay lại
+</a>
+
+<div class="body container" style="margin-top: 50px;">
+    <div class="d-flex justify-content-between align-items-center mb-1">
         <h2>Tất cả sản phẩm</h2>
     </div>
 
@@ -18,51 +21,22 @@
             {
                 <div class="col-lg-2_5 col-md-4 col-6 post2">
                     <a asp-controller="SanPham" asp-action="Details" asp-route-id="@item.Masp">
-                        <div class="product">
-                            <div class="product__img">
-                                <img src="@item.Hinh" alt="">
-                            </div>
-                            @if (item.Giamgia == 0 || item.Giamgia == null)
-                            {
-                                <div class="product__sale">
-                                    <h4>Mới</h4>
+                        <div class="card h-100 shadow-sm border-0">
+                            <div class="position-relative">
+                                <div class="product__img">
+                                    <img src="@item.Hinh" class="img-fluid rounded-top" />
                                 </div>
-
-                            }
-                            else
-                            {
-                                <div class="product__sale">
-                                    <h4>@item.Giamgia %</h4>
-                                </div>
-                            }
-                            <div class="product__content">
-                                <div class="product__title">
-                                    @item.Tensp
-                                </div>
-
-                                @if (!(item.Giamgia == 0 || item.Giamgia == null))
-                                {
-                                    <div class="product__pride-oldPride">
-                                        <span class="Price">
-                                            <bdi>
-                                                @string.Format("{0:N0}", item.Giaban)
-                                                <span class="currencySymbol">₫</span>
-                                            </bdi>
-                                        </span>
-                                    </div>
-                                }
-
-                            </div>
-                        </div>
-
-                        <div>
-                            <div class="product__pride-newPride">
-                                <span class="Price">
-                                    <bdi>
-                                        @string.Format("{0:N0}", item.Giakhuyenmai)
-                                        <span class="currencySymbol">₫</span>
-                                    </bdi>
+                                <span class="badge bg-danger position-absolute top-0 end-0 m-2">
+                                    @(item.Giamgia > 0 ? item.Giamgia + "%" : "Mới")
                                 </span>
+                            </div>
+                            <div class="product__content p-2">
+                                <div class="product__title fw-bold">@item.Tensp</div>
+                                @if (item.Giamgia > 0)
+                                {
+                                    <small class="text-muted"><s>@string.Format("{0:N0}", item.Giaban) ₫</s></small>
+                                }
+                                <div class="fw-bold text-danger">@string.Format("{0:N0}", item.Giakhuyenmai) ₫</div>
                             </div>
                         </div>
                     </a>
