--- a/qlthucung/Views/Security/Register.cshtml
+++ b/qlthucung/Views/Security/Register.cshtml
@@ -17,8 +17,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-4">
-                <div class="login-wrap py-3">
-                    <form asp-controller="Security" asp-action="Register" method="post" class="form" id="form-1">
+                <div class="login-wrap">
+                    <form asp-controller="Security" asp-action="Register" method="post" class="form" id="form-1" style="padding-bottom: 20px;">
                         <h3 class="heading text-center">
                             <span class="justify-content-between">Đăng ký</span>
                         </h3>
