--- a/qlthucung/Views/Shared/_Layout.cshtml
+++ b/qlthucung/Views/Shared/_Layout.cshtml
@@ -1,4 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@using Newtonsoft.Json
+@using Microsoft.AspNetCore.Http
+@{
+    int countCart = 0;
+    var cartJson = Context.Session.GetString("cart");
+    if (!string.IsNullOrEmpty(cartJson))
+    {
+        var cart = JsonConvert.DeserializeObject<List<qlthucung.Models.Item>>(cartJson);
+        countCart = cart?.Count ?? 0;
+    }
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -19,18 +30,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Great+Vibes&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-
-    <link href="~/Content/css1/Adminstyle.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/css1/styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Content/css/style.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Content/css1/Adminstyle.css" asp-append-version="true" />
     <style>
         #Thongtin {
             margin-top: auto; /* đẩy footer xuống đáy */
             width: 100%; /* luôn kéo dài full width */
         }
+
     </style>
 </head>
 <body id="page-top">
     <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-black d-flex" id="mainNav" style="padding-inline: 1rem;">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top d-flex" id="mainNav" style="padding-inline: 2rem;">
             <div class="container justify-content-between pr-1">
                 <a class="navbar-brand text-center" href="/">Shoppet</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,78 +52,98 @@
                 </button>
                 <div class="collapse navbar-collapse pr-1" id="navbarResponsive">
                     <ul class="justify-content-center ms-auto navbar-nav py-4 py-lg-0 text-uppercase">
-                        <li class="navbar-brand text-center w-100" id="formSearch">
-                            <form method="get" asp-controller="SanPham" asp-action="Search" class="navbar_search">
-                                <input class="search w-auto" id="message" name="search" placeholder="Nhập để tìm kiếm" type="text" value="">
-                                <i class="fa fa-search" id="searchBtn" type="submit" style="color:coral"></i>
+                        <li class="navbar-brand text-center w-100 me-5" id="formSearch">
+                            <form method="get" asp-controller="SanPham" asp-action="Search" class="navbar_search d-flex">
+                                <div class="input-group w-auto search">
+                                    <input type="text" class="form-control rounded-start-pill border-0"
+                                           id="message" name="search" placeholder="Nhập để tìm kiếm" style="background: none; border-radius: 8px; color: #8B5E3C;">
+                                    <button class="btn rounded-end-pill" id="searchBtn" type="submit"
+                                            style="background:#8B5E3C; color:#fff;">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </div>
                             </form>
                         </li>
-                        <li class="nav-item"><a class="nav-link pl-1" href="/">Trang chủ</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-action="Index" asp-controller="SanPham">Sản phầm</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-action="Index" asp-controller="DichVu">Dịch vụ</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link  @(ViewContext.RouteData.Values["controller"]?.ToString() == "SanPham" ? "active-menusp" : "")"
+                               asp-action="Index" asp-controller="SanPham">
+                                Sản phẩm
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link @(ViewContext.RouteData.Values["controller"]?.ToString() == "DichVu" ? "active-menu" : "")"
+                               asp-action="Index" asp-controller="DichVu">
+                                Dịch vụ
+                            </a>
+                        </li>
                         @if (!User.IsInRole("Admin"))
                         {
-                            <li class="nav-item"><a class="nav-link" asp-action="UserIndex" asp-controller="AdminChat">Liên hệ</a></li>
+                            <li class="nav-item">
+                                <a class="nav-link @(ViewContext.RouteData.Values["controller"]?.ToString() == "AdminChat" ? "active-menu" : "")"
+                                   asp-action="UserIndex" asp-controller="AdminChat">
+                                    Liên hệ
+                                </a>
+                            </li>
                         }
-                        <li style="display: flex; align-items: center;">
-                            <div class="login pl-2" id="loginClick">
+                        <li class="nav-item dropdown d-flex align-items-center">
+                            <div class="user-menu position-relative px-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                     fill="none" class="bi bi-person" viewBox="0 0 16 16"
+                                     stroke="#8B5E3C" style="cursor: pointer;" stroke-width="0.5">
+                                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
+                                </svg>
+
                                 @if (User.Identity.IsAuthenticated)
                                 {
-                                    <span class="d-flex">
-                                        @User.Identity.Name &nbsp;<i class="fa-solid fa-chevron-down"></i>
-
+                                    <span style="font-size: 12px;">
+                                        @User.Identity.Name
                                     </span>
 
-                                    <ul class="login_list">
-                                        <li><a asp-controller="DichVu" asp-action="UserInfo">Thông tin cá nhân</a></li>
+                                    <ul class="dropdown-menu-custom">
+                                        <li>
+                                            <a asp-controller="UserIf" asp-action="UserInfo"
+                                               class="@(ViewContext.RouteData.Values["controller"]?.ToString() == "UserIf" && ViewContext.RouteData.Values["action"]?.ToString() == "UserInfo"  ? "active-menu disabled" : "")">
+                                                Thông tin cá nhân
+                                            </a>
+                                        </li>
                                         @if (User.IsInRole("Admin"))
                                         {
                                             <li><a asp-controller="Admin" asp-action="Index">Dashboard</a></li>
                                         }
-                                        <li><a asp-controller="DonHangs" asp-action="Details">Đơn hàng</a></li>
+                                        <li>
+                                            <a asp-controller="DonHangs" asp-action="Details" class="@(ViewContext.RouteData.Values["controller"]?.ToString() == "DonHangs" && ViewContext.RouteData.Values["action"]?.ToString() == "Details" ? "active-menu" : "")">
+                                                Đơn hàng
+                                            </a>
+                                        </li>
                                         <li>
                                             <form asp-controller="Security" asp-action="SignOut" method="post">
-                                                <button type="submit" style="border: none; outline: none; background: transparent;color: white; text-transform: uppercase;">
+                                                <button type="submit" class="dropdown-btn">
                                                     Đăng xuất &nbsp;<span class="fas fa-sign-out-alt"></span>
                                                 </button>
                                             </form>
                                         </li>
-
                                     </ul>
                                 }
                                 else
                                 {
-                                    <div class="login">
-                                        <a asp-controller="Security" asp-action="SignIn"><i class="fa fa-user" style="color: white;"></i></a>
-                                    </div>
+                                    <a asp-controller="Security" asp-action="SignIn" class="ms-2 text-white">
+                                        <i class="fa fa-sign-in-alt"></i> Đăng nhập
+                                    </a>
                                 }
                             </div>
-                            <div class="login pr-3 pl-3">
-                                <a class="navbar__shoppingCart getstarted scrollto active" asp-controller="cart" asp-action="Index" style="font-weight:bold;text-decoration:none;display: inline-flex;align-items: center;position:relative;">
-
-                                    <svg width="24px" viewBox="0 0 24.00 24.00" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)" stroke-width="0.672">
-                                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.048"></g>
-                                        <g id="SVGRepo_iconCarrier">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M2 1C1.44772 1 1 1.44772 1 2C1 2.55228 1.44772 3 2 3H3.21922L6.78345 17.2569C5.73276 17.7236 5 18.7762 5 20C5 21.6569 6.34315 23 8 23C9.65685 23 11 21.6569 11 20C11 19.6494 10.9398 19.3128 10.8293 19H15.1707C15.0602 19.3128 15 19.6494 15 20C15 21.6569 16.3431 23 18 23C19.6569 23 21 21.6569 21 20C21 18.3431 19.6569 17 18 17H8.78078L8.28078 15H18C20.0642 15 21.3019 13.6959 21.9887 12.2559C22.6599 10.8487 22.8935 9.16692 22.975 7.94368C23.0884 6.24014 21.6803 5 20.1211 5H5.78078L5.15951 2.51493C4.93692 1.62459 4.13696 1 3.21922 1H2ZM18 13H7.78078L6.28078 7H20.1211C20.6742 7 21.0063 7.40675 20.9794 7.81078C20.9034 8.9522 20.6906 10.3318 20.1836 11.3949C19.6922 12.4251 19.0201 13 18 13ZM18 20.9938C17.4511 20.9938 17.0062 20.5489 17.0062 20C17.0062 19.4511 17.4511 19.0062 18 19.0062C18.5489 19.0062 18.9938 19.4511 18.9938 20C18.9938 20.5489 18.5489 20.9938 18 20.9938ZM7.00617 20C7.00617 20.5489 7.45112 20.9938 8 20.9938C8.54888 20.9938 8.99383 20.5489 8.99383 20C8.99383 19.4511 8.54888 19.0062 8 19.0062C7.45112 19.0062 7.00617 19.4511 7.00617 20Z" fill="#FFFFFF"></path>
-                                        </g>
+                            <div class="pr-3 pl-3 h-100 w-100">
+                                <a class="navbar__shoppingCart getstarted scrollto active position-relative d-inline-block"
+                                   asp-controller="cart" asp-action="Index" style="margin-top: 13px;">
+                                    <svg width="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
+                                         stroke="#8B5E3C" stroke-width="0.672">
+                                        <path fill="#8B5E3C" stroke="#ffffff" d="M2 1C1.44772 1 1 1.44772 1 2C1 2.55228 1.44772 3 2 3H3.21922L6.78345 17.2569C5.73276 17.7236 5 18.7762 5 20C5 21.6569 6.34315 23 8 23C9.65685 23 11 21.6569 11 20C11 19.6494 10.9398 19.3128 10.8293 19H15.1707C15.0602 19.3128 15 19.6494 15 20C15 21.6569 16.3431 23 18 23C19.6569 23 21 21.6569 21 20C21 18.3431 19.6569 17 18 17H8.78078L8.28078 15H18C20.0642 15 21.3019 13.6959 21.9887 12.2559C22.6599 10.8487 22.8935 9.16692 22.975 7.94368C23.0884 6.24014 21.6803 5 20.1211 5H5.78078L5.15951 2.51493C4.93692 1.62459 4.13696 1 3.21922 1H2ZM18 13H7.78078L6.28078 7H20.1211C20.6742 7 21.0063 7.40675 20.9794 7.81078C20.9034 8.9522 20.6906 10.3318 20.1836 11.3949C19.6922 12.4251 19.0201 13 18 13ZM18 20.9938C17.4511 20.9938 17.0062 20.5489 17.0062 20C17.0062 19.4511 17.4511 19.0062 18 19.0062C18.5489 19.0062 18.9938 19.4511 18.9938 20C18.9938 20.5489 18.5489 20.9938 18 20.9938ZM7.00617 20C7.00617 20.5489 7.45112 20.9938 8 20.9938C8.54888 20.9938 8.99383 20.5489 8.99383 20C8.99383 19.4511 8.54888 19.0062 8 19.0062C7.45112 19.0062 7.00617 19.4511 7.00617 20Z" />
                                     </svg>
-                                    @using Microsoft.AspNetCore.Http
 
-                                    @{
-                                        HttpContext httpContext = ViewContext.HttpContext;
-                                        string name = httpContext.Session.GetString("countCart");
-                                    }
-
-                                    @if (String.IsNullOrEmpty(name))
-                                    {
-                                        <span style="color: black; position: absolute; left: 20px; top:5px; border: 0.25px solid white; border-radius: 100%; padding-inline: 5px; background-color: white;">0</span>
-                                    }
-                                    else
-                                    {
-                                        <span>@name</span>
-                                    }
+                                    <span id="cartCount" style="position: absolute; top: 20px; right: -5px; min-width: 18px; height: 18px; font-size: 12px; border-radius: 50%; display: flex; align-items: center; justify-content: center; padding: 0 5px;">
+                                        @countCart
+                                    </span>
                                 </a>
+
                             </div>
                         </li>
                     </ul>
@@ -122,12 +155,12 @@
 
     @RenderBody()
 
-    <footer class="bg-black text-muted w-100" id="Thongtin">
-        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05); width: 100%;">
+    <footer class="text-muted w-100" id="Thongtin">
+        <div class="text-center p-4 d-flex" style="width: 100%; color:#8B5E3C; justify-content: center;">
             Design by:
-            <a class="text-reset fw-bold" href="https://mdbootstrap.com/">
+            <p class="text-reset fw-bold">
                 "Shoppet - Nâng niu từng bước chân, chăm sóc trọn vẹn yêu thương!"🐾❤️
-            </a>
+            </p>
         </div>
     </footer>
 
@@ -137,6 +170,32 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/Content/scripts/script.js" asp-append-version="true"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const userMenu = document.querySelector(".user-menu");
+            const dropdown = userMenu.querySelector(".dropdown-menu-custom");
+
+            userMenu.addEventListener("click", function (e) {
+                e.stopPropagation(); // ngăn lan ra ngoài
+                dropdown.classList.toggle("show");
+            });
+
+            // click ra ngoài thì đóng menu
+            document.addEventListener("click", function () {
+                dropdown.classList.remove("show");
+            });
+        });
+        function removeCartItem(productId) {
+            fetch('/Cart/RemoveAjax/' + productId, { method: 'POST' })
+                .then(res => res.json())
+                .then(data => {
+                    if (data.success) {
+                        document.getElementById('cartCount').innerText = data.countCart;
+                    }
+                });
+        }
+
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
