--- a/qlthucung/Views/SanPham/Details.cshtml
+++ b/qlthucung/Views/SanPham/Details.cshtml
@@ -82,9 +82,13 @@
                     else
                     {
                         <div class="number d-flex">
-                            <div class="d-flex">Số lượng: <div class="spacer" style="margin-inline:10px;"></div></div>
+                            <div class="d-flex">
+                                Số lượng:
+                                <div class="spacer" style="margin-inline:10px;"></div>
+                            </div>
                             <div class="number__count pl-2">
-                                <input type="number" value="1" name="soluong" class="list-group m-0 p-0 text-center w-25">
+                                <input type="number" name="soluong" value="0" min="0"
+                                       class="list-group m-0 p-0 text-center w-25">
                             </div>
                         </div>
                         <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: nowrap; white-space: nowrap;">
